fix: use correct dark mode specificity (#71)
* fix: use correct dark mode specificity

* chore: changeset

--- a/packages/css/src/base/motion.css
+++ b/packages/css/src/base/motion.css
@@ -7,14 +7,12 @@
 	}
 
 	@media (prefers-reduced-motion: reduce) {
-		:root {
+		:where(:root) {
 			--st-motion-no-preference: initial;
 			--st-motion-reduce: ;
 		}
 	}
-}
 
-@layer utilities {
 	.no-preference {
 		--st-motion-no-preference: ;
 		--st-motion-reduce: initial;
